--- a/ui/package.json
+++ b/ui/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "@radix-ui/colors": "^0.1.7",
     "@radix-ui/react-toggle-group": "^0.1.0",
+    "@react-three/drei": "^7.12.1",
+    "@react-three/fiber": "^7.0.7",
     "@stitches/react": "^1.0.0",
     "next": "11.1.2",
     "next-themes": "^0.0.15",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-feather": "^2.0.9"
+    "react-feather": "^2.0.9",
+    "three": "^0.132.2"
   },
   "devDependencies": {
     "@types/react": "17.0.22",
